<resources>
    <string name="action_sign_in_short">REGISTER</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">RESET PASSWORD</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="settings_name">Account Settings</string>
    <string name="or" />
    <string name="avatarSample">avatar</string>
    <string name="getstarted">Get Started</string>
    <string name="student_personal_app">Student Personal App</string>
    <string name="todo">TODO</string>
    <string name="rewritepassword">Confirm Password</string>
    <string name="fullname">Full Name</string>
    <string name="already_have_an_account">Already have an Account ?</string>
    <string name="track">Track Me</string>
    <string name="title_activity_profile">Profile</string>
    <string name="action_settings">Settings</string>
    <string name="location_here">Location Here</string>
    <string name="my_location">My location</string>
    <string name="last_updated_location">Last Updated Location</string>
    <string name="updated_on_date">Updated on Date</string>
    <string name="update_my_location">Update my Location</string>
    <string name="developer_appsnipp_com">developer@appsnipp.com</string>

    <string name="app_name">Places Project</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="google_maps_api">AIzaSyAxj9s5LBMh9aUhq_B8-8OZknpkOZGoRCo</string>
</resources>
