<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".dashboard"
    tools:showIn="@layout/activity_profile">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <TextView
                style="@style/headerText"
                android:text="Account Info"
                android:layout_marginBottom="20dp"/>

            <RelativeLayout style="@style/profileDetailsLayout">

                <ImageView
                    android:id="@+id/nameImageView"
                    style="@style/profileDetailsImage"
                    android:src="@drawable/ic_name" />

                <TextView
                    android:id="@+id/nameTextView"
                    android:text="@string/hint_name"
                    android:layout_toEndOf="@id/nameImageView"
                style="@style/profileDetailsTextMain" />

                <TextView
                    android:id="@+id/userFullName"
                    style="@style/profileDetailsMiniText"
                    android:layout_toRightOf="@id/nameImageView"
                    android:text="developer" />

            </RelativeLayout>

            <View style="@style/proifleDetailsView" />
<!--            <RelativeLayout style="@style/profileDetailsLayout">-->
<!--                <ImageView-->
<!--                    android:id="@+id/mobileImageView"-->
<!--                    android:src="@drawable/ic_mobile"-->
<!--                    style="@style/profileDetailsImage" />-->

<!--                <TextView-->
<!--                    android:text="Mobile"-->
<!--                    android:layout_toRightOf="@id/mobileImageView"-->
<!--                    style="@style/profileDetailsTextMain"/>-->

<!--&lt;!&ndash;                <TextView&ndash;&gt;-->
<!--&lt;!&ndash;                    style="@style/profileDetailsMiniText"&ndash;&gt;-->
<!--&lt;!&ndash;                    android:layout_toRightOf="@id/mobileImageView"&ndash;&gt;-->
<!--&lt;!&ndash;                    android:text="+91-8129999999" />&ndash;&gt;-->

<!--            </RelativeLayout>-->

            <View style="@style/proifleDetailsView" />
            <RelativeLayout style="@style/profileDetailsLayout">
                <ImageView
                    android:id="@+id/emailImageView"
                    android:src="@drawable/ic_email"
                    style="@style/profileDetailsImage" />

                <TextView
                    android:text="@string/email"
                    android:layout_toRightOf="@id/emailImageView"
                    style="@style/profileDetailsTextMain" />

                <TextView
                    android:id="@+id/userEmail2"
                    style="@style/profileDetailsMiniText"
                    android:layout_toRightOf="@id/emailImageView"
                    android:text="@string/email" />

            </RelativeLayout>

            <View style="@style/proifleDetailsView" />
            <RelativeLayout style="@style/profileDetailsLayout">
                <ImageView
                    android:id="@+id/addressImageView"
                    android:src="@drawable/ic_address"
                    style="@style/profileDetailsImage" />

                <TextView
                    android:text="@string/my_location"
                    android:layout_toRightOf="@id/addressImageView"
                    style="@style/profileDetailsTextMain" />

            </RelativeLayout>

            <TextView
                android:id="@+id/myLocation"
                style="@style/profileDetailsMiniText"
                android:layout_width="350dp"
                android:layout_height="50dp"
                android:layout_marginLeft="9dp"
                android:gravity="center"
                android:text="@string/location_here" />

            <View style="@style/proifleDetailsView" />
            <RelativeLayout style="@style/profileDetailsLayout">
                <ImageView
                    android:id="@+id/dobImageView"
                    android:src="@drawable/ic_dob"
                    style="@style/profileDetailsImage" />

                <TextView
                    style="@style/profileDetailsTextMain"
                    android:layout_toRightOf="@id/dobImageView"
                    android:text="@string/last_updated_location" />

                <TextView
                    android:id="@+id/dateView"
                    style="@style/profileDetailsMiniText"
                    android:layout_toRightOf="@id/dobImageView"
                    android:text="@string/updated_on_date" />

            </RelativeLayout>

            <View style="@style/proifleDetailsView" />

        </LinearLayout>

</androidx.core.widget.NestedScrollView>
